[package]
name = "data_profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6.0"
async-recursion = "1.0.4"
async-walkdir = "0.2.0"
chrono = "0.4.24"
futures-lite = "1.13.0"
serde = { version = "1.0.163", features = ["derive"] }
smol = "1.3.0"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.0", features = ["full"] }
walkdir = "2.3.3"
